--- a/while0s/.cproject
+++ b/while0s/.cproject
@@ -204,4 +204,5 @@
 		<project id="while0s.com.ti.ccstudio.buildDefinitions.MSP430.ProjectType.52465135" name="MSP430" projectType="com.ti.ccstudio.buildDefinitions.MSP430.ProjectType"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
