--- a/whileSubroutines/.cproject
+++ b/whileSubroutines/.cproject
@@ -204,4 +204,5 @@
 		<project id="whileSubroutines.com.ti.ccstudio.buildDefinitions.MSP430.ProjectType.1054704279" name="MSP430" projectType="com.ti.ccstudio.buildDefinitions.MSP430.ProjectType"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
